--- a/mobile_client/package.json
+++ b/mobile_client/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.3.1",
-    "react-native": "0.55.4"
+    "react-native": "0.55.4",
+    "react-native-swiper": "^1.5.14"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
