--- a/mobile_client/package.json
+++ b/mobile_client/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.4",
-    "react-native-swiper": "^1.5.14"
+    "react-native-gesture-handler": "^1.1.0",
+    "react-native-swiper": "^1.5.14",
+    "react-navigation": "^3.6.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
